# browser-ai

./: .gitattributes  .gitignore  LICENSE  README.md  README.zh-CN.md  README_en.md  README_zh.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
config/: ai_sites.example.json  search_routes.example.json
scripts/: __init__.py  browser_ai.py  import_firefox_login.py  pre-commit-check.py  公众号搜索.bat  列出站点.bat  可视化搜索.bat  批量导入Firefox登录态.bat  智能搜索.bat  添加新站点.bat  登录AI.bat  登录元宝.bat  登录豆包.bat
tests/: test_smoke.py
