[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-ai"
version = "0.1.0"
description = "Multi-site AI aggregator CLI for Chinese AI products and search engines (Yuanbao, Kimi, Tongyi, Doubao, Baidu, Sogou WeChat, ...)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Weiming3", email = "weiming3@users.noreply.github.com" },
]
keywords = [
    "playwright",
    "camoufox",
    "browser-automation",
    "ai-router",
    "ai-aggregator",
    "chinese-ai",
    "wechat-search",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Utilities",
]
dependencies = [
    "playwright>=1.40.0",
    "camoufox>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/Weiming3/browser-ai"
Issues = "https://github.com/Weiming3/browser-ai/issues"
"Source code" = "https://github.com/Weiming3/browser-ai"

[project.scripts]
browser-ai = "scripts.browser_ai:main"

[tool.setuptools]
include-package-data = true
platforms = ["any"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
namespaces = false

[tool.setuptools.package-data]
scripts = ["py.typed"]

[tool.setuptools.data-files]
"browser_ai_examples" = [
    "config/ai_sites.example.json",
    "config/search_routes.example.json",
]